tests/baselines/reference/indexWithoutParamType2.errors.txt
tests/cases/compiler/indexWithoutParamType2.ts(2,5): error TS1164: Computed property names are not allowed in class property declarations.


==== tests/cases/compiler/indexWithoutParamType2.ts (1 errors) ====
    class C {
        [x]: string
        ~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
    }